fixed broken css for mobile

--- a/anime/resources/opsMobile.css
+++ b/anime/resources/opsMobile.css
@@ -1,4 +1,4 @@
 *{font-size:50px}
 img{width:380px;height:203px}
-h1{padding:50px}
+em{padding:60px}
 h2{font-size: 70px;}
